--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,6 @@ img{
 }
 .adress{
     font-style: normal; 
-
 }
 
 .link-tel{
@@ -139,7 +138,6 @@ img{
     padding-top: 188px;
     padding-bottom: 188px;
     text-align: center;
-    margin-bottom: 120px;
 }
 .hero-text{
     font-weight:700;
@@ -205,21 +203,17 @@ img{
     color: var(--primary-color); 
 }
 .about-list{
-    padding: 0;
-    margin: 0;
-    list-style: none;
     display: flex;
     flex-wrap: wrap;
-    margin-left: calc(-1 * var(--card-set-gap));
-    margin-top: calc(-1 * var(--card-set-gap));
+    gap: 24px;
 }
 .about-item{
-    flex-basis: calc(100% / 4 - var(--card-set-gap));
-    margin-left: var(--card-set-gap);
-    margin-top: var(--card-set-gap);
+    flex-basis: calc((100% - 3 * 24px) / 4);
+    
 }
 .about{
-    margin-bottom: 120px;
+ padding-top: 120px;
+ padding-bottom: 120px;
 }
  /**--------DOING------*/
  .about-title-doing{
@@ -242,12 +236,11 @@ img{
     margin-top: calc(-1 * var(--card-set-gap));
 }
 .doing-item{
-    flex-basis: calc(100% / 3 - var(--card-set-gap));
-    margin-left: var(--card-set-gap);
-    margin-top: var(--card-set-gap);
+    flex-basis: calc((100% - 2 * 24px) / 3);
 }
 .doing{
-    margin-bottom: 120px;
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
 
  /**--------TEAM-------*/
@@ -257,21 +250,23 @@ img{
 }  
 .team-item{
     background-color: var(--text-btn-color);
+    flex-basis: calc((100% - 3 * 24px) / 4);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    border-radius: 0px 0px 4px 4px;
 }
 .team-list{
-    padding: 0;
-    margin: 0;
-    list-style: none;
     display: flex;
     flex-wrap: wrap;
-    margin-left: calc(-1 * var(--card-set-gap));
-    margin-top: calc(-1 * var(--card-set-gap));
+    margin-top: 72px ;
+    gap: 24px;
     }
-.team-item{
-    flex-basis: calc(100% / 4 - var(--card-set-gap));
-    margin-left: var(--card-set-gap);
-    margin-top: var(--card-set-gap);
-    }   
+
+.box-content{
+    padding: 32px;
+    padding-left: 16px;
+    text-align: center;
+}
+    
 
  /**--------FOOTER-------*/ 
 .footer{
@@ -314,17 +309,19 @@ img{
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    display: flex;
-    align-items: center;
     text-align: center;
     letter-spacing: 0.04em;
     background-color: var(--light-mode-backgrounds);
     color: var(--brand-color);
-    border: 1px solid var(--accent);
+    border: 0px solid transparent;
+    box-sizing: border-box;
     border-radius: 4px;
-
-
+    padding: 12px 24px;
+    display: block;
+    margin: 0 auto;
     cursor:pointer;
+    min-width: 69px;
+    height: 48px;
 }
 .choice-btn:hover,
 .choice-btn:focus{
@@ -333,20 +330,21 @@ img{
 }
 .choice-btn:active{
     background-color: var(--Pressed-state);
-    color: var(--text-btn-color)
+    color: var(--text-btn-color) 
 }
 
 .choice{
     padding-top: 96px;
     padding-bottom: 120px;
+    background-color: var(--text-btn-color);
 }
 .choice-list{
     margin-bottom: 72px;
     display: flex;
-    align-items: center;
-    margin-right: auto;
-    gap: var(--card-set-gap);
-    min-width: 586px;
+    flex-wrap: wrap; 
+    justify-content: center;
+    column-gap: 24px; 
+    row-gap: 48px;
 }
 
 /**---------GALERY-----*/
@@ -368,6 +366,10 @@ img{
 .card-content{
     padding: 32px;
     padding-left: 16px;
+    
+    border-left: 1px solid var(--accent);
+    border-bottom: 1px solid var(--accent);
+    border-right: 1px solid var(--accent); 
 }
 
 .galery-link:hover,
@@ -375,18 +377,12 @@ img{
     color:var(--Pressed-state)
 }
 .galery-list{
-    padding: 0;
-    margin: 0;
-    list-style: none;
     display: flex;
     flex-wrap: wrap;
-    margin-left: calc(-1 * var(--card-set-gap));
-    margin-top: -48px;
+    column-gap: var(--card-set-gap);
+    row-gap: calc(var(--card-set-gap)*2 );
 
 }
 .galery-item{
    flex-basis: calc(100% / 3 - var(--card-set-gap));
-   margin-left: var(--card-set-gap);
-   margin-top: 48px;
-   border-bottom: 1px solid var(--accent) ;
 }
