--- a/css/styles.css
+++ b/css/styles.css
@@ -205,7 +205,7 @@ img{
 .about-list{
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
+    gap: var(--card-set-gap);
 }
 .about-item{
     flex-basis: calc((100% - 3 * 24px) / 4);
@@ -258,7 +258,7 @@ img{
     display: flex;
     flex-wrap: wrap;
     margin-top: 72px ;
-    gap: 24px;
+    gap: var(--card-set-gap);
     }
 
 .box-content{
@@ -305,7 +305,6 @@ img{
 
 .choice-btn{
     font-family: 'Roboto',sans-serif;
-    font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -343,8 +342,8 @@ img{
     display: flex;
     flex-wrap: wrap; 
     justify-content: center;
-    column-gap: 24px; 
-    row-gap: 48px;
+    gap: var(--card-set-gap); 
+    
 }
 
 /**---------GALERY-----*/
