--- a/css/styles.css
+++ b/css/styles.css
@@ -159,9 +159,10 @@ img{
     line-height: 1.5;
     letter-spacing: 0.04em;
     background-color: var(--brand-color);
+    box-sizing: border-box;
+    border: 0px solid transparent;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px; 
-    border: 0px solid transparent;
     cursor: pointer;
     color: var(--text-btn-color);
     padding: 16px 32px;
@@ -173,6 +174,7 @@ img{
 .hero-btn:hover,.hero-btn:focus{
     background-color: var(--Pressed-state);
     color: var(--text-btn-color);
+    border: 0px solid transparent;
 }
 .btn:active{
     color: var(--brand-color);
@@ -208,12 +210,11 @@ img{
     gap: var(--card-set-gap);
 }
 .about-item{
-    flex-basis: calc((100% - 3 * 24px) / 4);
+    flex-basis: calc((100% - 3 * var(--card-set-gap)) / 4);
     
 }
 .about{
  padding-top: 120px;
- padding-bottom: 120px;
 }
  /**--------DOING------*/
  .about-title-doing{
@@ -227,16 +228,12 @@ img{
     margin-bottom: 72px;
 }
 .doing-list{
-    padding: 0;
-    margin: 0;
-    list-style: none;
     display: flex;
     flex-wrap: wrap;
-    margin-left: calc(-1 * var(--card-set-gap));
-    margin-top: calc(-1 * var(--card-set-gap));
+    gap: var(--card-set-gap);
 }
 .doing-item{
-    flex-basis: calc((100% - 2 * 24px) / 3);
+    flex-basis: calc((100% - 2 * var(--card-set-gap)) / 3);
 }
 .doing{
     padding-top: 120px;
@@ -250,7 +247,7 @@ img{
 }  
 .team-item{
     background-color: var(--text-btn-color);
-    flex-basis: calc((100% - 3 * 24px) / 4);
+    flex-basis: calc((100% - 3 * var(--card-set-gap)) / 4);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 0px 0px 4px 4px;
 }
@@ -312,7 +309,7 @@ img{
     letter-spacing: 0.04em;
     background-color: var(--light-mode-backgrounds);
     color: var(--brand-color);
-    border: 0px solid transparent;
+    border: 1px solid var(--accent);
     box-sizing: border-box;
     border-radius: 4px;
     padding: 12px 24px;
@@ -326,10 +323,12 @@ img{
 .choice-btn:focus{
     background-color: var(--Pressed-state);
     color: var(--text-btn-color);
+    border-color:   transparent;
 }
 .choice-btn:active{
     background-color: var(--Pressed-state);
-    color: var(--text-btn-color) 
+    color: var(--text-btn-color) ;
+    border-color:   transparent;
 }
 
 .choice{
@@ -383,5 +382,5 @@ img{
 
 }
 .galery-item{
-   flex-basis: calc(100% / 3 - var(--card-set-gap));
+   flex-basis: calc((100% - 2 * var(--card-set-gap))/3);
 }
