--- a/css/styles.css
+++ b/css/styles.css
@@ -256,10 +256,10 @@ img{
     }
 
 .box-content{
-    padding-top: 32px;
-    padding-left: 16px;
-    padding-bottom: 32px;
+    padding: 32px 16px;
     text-align: center;
+    
+    
 }
     
 
